--- a/front/src/pages/index.css
+++ b/front/src/pages/index.css
@@ -1,17 +1,24 @@
-*{
+* {
   margin: 0;
   border: 0;
   padding: 0;
   vertical-align: baseline;
+  box-sizing: border-box;
+}
+
+html {
+  -webkit-text-size-adjust: 100%;
+  line-height: 1.15;
 }
 
 body {
-  vertical-align: baseline;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #fff;
+  letter-spacing: 1px;
 }
 
 code {
@@ -23,21 +30,21 @@ div {
   display: block;
 }
 
-img{
+img {
   border-style: none;
 }
 
-h1{
+h1 {
   letter-spacing: 2px;
   margin: 10px 0 15px;
 }
 
-form{
+form {
   display: block;
 }
 
-input{
-  writing-mode:  horizontal-tb !important;
+input {
+  writing-mode: horizontal-tb !important;
   text-rendering: auto;
   letter-spacing: normal;
   word-spacing: normal;
@@ -45,4 +52,41 @@ input{
   display: inline-block;
   text-align: start;
   cursor: text;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  letter-spacing: 2px;
+  font-weight: 400;
+  margin: 10px 0 15px;
+}
+
+h1{
+  font-weight: 200;
+  letter-spacing: 2px;
+  font-size: 32px;
+}
+
+h2 {
+  font-size: 24px;
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+
+li{
+  text-align: -webkit-match-parent;
+}
+
+ul,ol{
+  list-style: none;
+}
+
+a{
+  margin-left: 9px;
+  text-decoration: none;
+  color: #61dafb;
 }
